<resources>
    <string name="app_name">CourtCounter</string>
    <string name="TextView">TeamA</string>
    <string name="TextView2">TeamB</string>
    <string name="TextView3">"0"</string>
    <string name="TextView4">"0"</string>
    <string name="Button">+3 POINTS</string>
    <string name="Button2">+2 POINTS</string>
    <string name="Button3">+1 POINTS</string>
    <string name="Button4">+3 POINTS</string>
    <string name="Button5">+2 POINTS</string>
    <string name="Button6">+1 POINTS</string>
    <string name="Button9">RESET</string>
</resources>